fix contrast navbar and contact scroll

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -8,6 +8,8 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-weight: 700;
+    text-transform: uppercase;
   }
 
   &__link {
